# structured-address-fix-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  STYLEGUIDE.md  SUPPORT.md  glama.json  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  mcp-inspect.yml  publish-mcp.yml  release.yml  scorecard.yml
bench/: load_test.py
docs/: deployment-cookbook.md  quickstart.md
examples/: 01_list_policies.py  02_classify_address.py  03_assess_address.py  04_assess_message.py  05_remediate_address.py  06_remediate_message.py  07_preview_patch.py  08_explain_finding.py  09_get_cutover_date.py  README.md  mcp_tools.py
examples/_data/: pacs008_three_party.xml
requirements/: build.in  build.txt  lint.in  lint.txt  sbom.in  sbom.txt  security.in  security.txt  test.in  test.txt
structured_address_fix_mcp/: __init__.py  explanations.py  server.py
tests/: conftest.py  test_examples.py  test_explanations.py  test_mcp_server.py  test_server_main.py  test_version.py
